# aoc

./: .gitignore  .pre-commit-config  create_aoc_files.py  pyproject.toml
aoc_solutions/: day1.py  day_1.py  day_2.py  day_3.py  day_4.py  day_5.py  tools.py
src/aoc/2019/d01/: day_01.py  puzzle.txt
src/aoc/2019/d03/: day_03.py  puzzle.txt
src/aoc/2019/d04/: day_04.py  puzzle.txt
src/aoc/2019/d06/: day_06.py  puzzle.txt
src/aoc/2019/d07/: day_07.py  puzzle.txt
src/aoc/2019/d09/: day_09.py  puzzle.txt
src/aoc/2019/d10/: day_10.py  puzzle.txt
src/aoc/2020/d02/: day_02.py  input.txt  puzzle.txt
src/aoc/2020/d03/: day_03.py  input.txt  puzzle.txt
src/aoc/2020/d04/: day_04.py  input.txt  puzzle.txt
src/aoc/2020/d06/: day_06.py  input.txt  puzzle.txt
src/aoc/2020/d08/: day_08.py  input.txt  puzzle.txt
src/aoc/2020/d09/: day_09.py  input.txt  puzzle.txt
src/aoc/2020/d11/: day_11.py  input.txt  puzzle.txt
src/aoc/2021/d01/: day_01.py  input.txt  puzzle.txt
src/aoc/2021/d02/: day_02.py  input.txt  puzzle.txt
src/aoc/2021/d03/: day_03.py  input.txt  puzzle.txt
src/aoc/2021/d04/: day_04.py  input.txt  puzzle.txt
src/aoc/2021/d05/: day_05.py  input.txt  puzzle.txt
src/aoc/2021/d07/: day_07.py  input.txt  puzzle.txt
src/aoc/2021/d09/: day_09.py  input.txt  puzzle.txt
src/aoc/2021/d10/: day_10.py  input.txt  puzzle.txt
src/aoc/2021/d11/: day_11.py  input.txt  puzzle.txt
src/aoc/2021/d12/: day_12.py  input.txt  puzzle.txt
src/aoc/2021/d13/: day_13.py  input.txt  puzzle.txt
src/aoc/2021/d14/: day_14.py  input.txt  (+1 more)
tests/: test_day_5.py
(+161 files in other folders)
