[tool.poetry]
name = "aoc-solutions"
version = "0.1.0"
description = ""
authors = ["Daniel Hjertholm <daniel.hjertholm@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
advent-of-code-data = "^1.1.0"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
