[tool.poetry]
name = "aoc-solutions"
version = "0.1.0"
description = ""
authors = ["Daniel Hjertholm <daniel.hjertholm@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
advent-of-code-data = "^1.1.0"
pydantic = "^1.8.2"
numpy = "^1.21.4"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
